<resources>
    <string name="app_name">Jenni OBD2 Monitor</string>
    <string name="sel_devices">Select Devices</string>
    <string name="help_title">Help Title</string>
    <string name="connected_status">Connected Status</string>
    <string name="response_message">Response Message</string>
    <string name="supported_pids">Supported PIDs[00-20],[0-不支持][1-支持]</string>
    <string name="input_command">Input Command AT或OBD2命令</string>
    <string name="send_command">Send Command</string>
    <string name="select_device">Select Device</string>
    <string name="disconnect_device">Disconnect Device</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other devices</string>
    <string name="scan_device_btn">Scan Devices</string>
    <string name="stop_scan_btn">Stop Scan</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_help">Help</string>
    <string name="menu_res_ok">OK</string>
    <string name="menu_res_normal">Normal</string>
    <string name="menu_res_error">Error</string>
    <string name="bt_not_available">Not Available</string>
    <string name="please_input_cmd">Input Command</string>
    <string name="device_connecting">Device Connecting...</string>
    <string name="no_device_found">No Device Found</string>
    <string name="device_scanning">Device Scanning</string>
    <string name="none_paired">None Paired</string>
    <string name="obd_protocol">OBDII Protocol</string>
    <string name="obd_commands">OBDII Commands</string>
    <string name="obd_cmds_cmd">Cmd</string>
    <string name="obd_cmds_detail">Detail</string>
    <string name="obd_cmds_unit">Unit</string>
    <string name="obd_cmds_return">Return</string>
    <string name="obd_cmds_formula">Formula</string>
</resources>