<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/obd2_protocol_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/gray"
        android:gravity="center"
        android:text="@string/obd_protocol" />

    <ListView
        android:id="@+id/obd2_protocol_listView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/obd2_protocol_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/gray"
        android:gravity="center"
        android:text="@string/obd_commands" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/obd2_cmd_cmd"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/obd_cmds_cmd" />

        <TextView
            android:id="@+id/obd2_cmd_return"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/obd_cmds_detail" />

        <TextView
            android:id="@+id/obd2_cmd_return"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/obd_cmds_unit" />

        <TextView
            android:id="@+id/obd2_cmd_return"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/obd_cmds_return" />

        <TextView
            android:id="@+id/obd2_cmd_formula"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/obd_cmds_formula" />
    </LinearLayout>

    <GridView
        android:id="@+id/obd2_cmd_gridView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="left|center_vertical"
        android:numColumns="5" />

</LinearLayout>

